Finalisation du code CSS statique pour les menus

--- a/menu1.html
+++ b/menu1.html
@@ -20,165 +20,179 @@
                 </p>
             </div>
         </nav>
-        <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Restaurant 1">
+        <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Restaurant 1" class="header_img">
     </header>
-    <main>
-        <div>
-            <h1>
+    <main class="main">
+        <div class="main__name">
+            <h1 class="main__name__text">
                 La palette du goût
             </h1>
-            <i class="fa-light fa-heart"></i>
+            <i class="fa-regular fa-heart main__name__icone"></i>
         </div>
-        <section>
-            <h2>
+        <section class="main__section">
+            <h2 class="main__section__title">
                 ENTRÉES
             </h2>
-            <div>
-                <h3>
+            <div class="main__section__card">
+                <h3 class="main__section__card__title">
                     Fricassée d'escargot
                 </h3>
-                <div>
+                <div class="main__section__card__description">
                     <p>
                         Au piment d'Espelette
                     </p>
-                    <p>
+                    <p class="main__section__card__description__price">
                         25€
                     </p>
                 </div>
             </div>
-            <div>
-                <h3>
+            <div class="main__section__card">
+                <h3 class="main__section__card__title">
                     Foie gras de canard mi-cuit
                 </h3>
-                <div>
+                <div class="main__section__card__description">
                     <p>
                         Et ses copeaux de truffe noire
                     </p>
-                    <p>
+                    <p class="main__section__card__description__price">
                         35€
                     </p>
                 </div>
             </div>
-            <div>
-                <h3>
+            <div class="main__section__card">
+                <h3 class="main__section__card__title">
                     Œuf au plat
                 </h3>
-                <div>
+                <div class="main__section__card__description">
                     <p>
                         Assaisonné à la truffe sur lit de caviar
                     </p>
-                    <p>
+                    <p class="main__section__card__description__price">
                         20€
                     </p>
                 </div>
             </div>
         </section>
-        <section>
-            <h2>
+        <section class="main__section">
+            <h2 class="main__section__title">
                 PLATS
             </h2>
-            <div>
-                <h3>
+            <div class="main__section__card">
+                <h3 class="main__section__card__title">
                     Filet de boeuf aux herbes
                 </h3>
-                <div>
+                <div class="main__section__card__description">
                     <p>
                         Accompagné de sa ribambelle de légumes
                     </p>
-                    <p>
+                    <p class="main__section__card__description__price">
                         40€
                     </p>
                 </div>
             </div>
-            <div>
-                <h3>
+            <div class="main__section__card">
+                <h3 class="main__section__card__title">
                     Parmentier de queue de boeuf
                 </h3>
-                <div>
+                <div class="main__section__card__description">
                     <p>
                         À la truffe noire sur sa purée de panais
                     </p>
-                    <p>
+                    <p class="main__section__card__description__price">
                         35€
                     </p>
                 </div>
             </div>
-            <div>
-                <h3>
+            <div class="main__section__card">
+                <h3 class="main__section__card__title">
                     Filet de turbot
                 </h3>
-                <div>
+                <div class="main__section__card__description">
                     <p>
                         Aux agrumes
                     </p>
-                    <p>
+                    <p class="main__section__card__description__price">
                         44€
                     </p>
                 </div>
             </div>
         </section>
-        <section>
-            <h2>
+        <section class="main__section">
+            <h2 class="main__section__title">
                 DESSERTS
             </h2>
-            <div>
-                <h3>
+            <div class="main__section__card">
+                <h3 class="main__section__card__title">
                     Paris-Brest
                 </h3>
-                <div>
+                <div class="main__section__card__description">
                     <p>
                         Revisité
                     </p>
-                    <p>
+                    <p class="main__section__card__description__price">
                         18€
                     </p>
                 </div>
             </div>
-            <div>
-                <h3>
+            <div class="main__section__card">
+                <h3 class="main__section__card__title">
                     Macaron au chocolat d'exception 
                 </h3>
-                <div>
+                <div class="main__section__card__description">
                     <p>
                         Et glace à la vanille de Madagascar
                     </p>
-                    <p>
+                    <p class="main__section__card__description__price">
                         22€
                     </p>
                 </div>
             </div>
-            <div>
-                <h3>
+            <div class="main__section__card">
+                <h3 class="main__section__card__title">
                     Mousse au chocolat 
                 </h3>
-                <div>
+                <div class="main__section__card__description">
                     <p>
                         Au piment d'Espelette et à la truffe noire
                     </p>
-                    <p>
+                    <p class="main__section__card__description__price">
                         23€
                     </p>
                 </div>
             </div>
         </section>
-        <button>
-            Commander
-        </button>
+        <div class="main__container">
+            <button class="main__container__button">
+                Commander
+            </button>
+        </div>
     </main>
-    <footer>
-        <img src="images/logo/ohmyfood.png" alt="Logo Ohmyfood">
-        <ul>
-            <li>
-                <a href="#"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a>
+    <footer class="footer">
+        <p class="footer__logo">
+            ohmyfood
+        </p>
+        <ul class="footer__ul">
+            <li class="footer__ul__li">
+                <a href="#" class="footer__ul__li__link">
+                    <div class="footer__ul__li__link__icone footer__ul__li__link__icone--more">
+                        <i class="fa-solid fa-utensils"></i>
+                    </div>
+                    Proposer un restaurant
+                </a>
             </li>
-            <li>
-                <a href="#"><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</a>
+            <li class="footer__ul__li">
+                <a href="#" class="footer__ul__li__link">
+                    <div class="footer__ul__li__link__icone">
+                        <i class="fa-solid fa-handshake-angle"></i>
+                    </div>
+                    Devenir partenaire
+                </a>
             </li>
-            <li>
-                <a href="#">Mentions légales</a>
+            <li class="footer__ul__li">
+                <a href="#" class="footer__ul__li__link footer__ul__li__link--weight">Mentions légales</a>
             </li>
-            <li>
-                <a href="#">Contact</a>
+            <li class="footer__ul__li">
+                <a href="#" class="footer__ul__li__link footer__ul__li__link--weight">Contact</a>
             </li>
         </ul>
     </footer>
