--- a/menu3.html
+++ b/menu3.html
@@ -8,180 +8,191 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Shrikhand&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/style/sassstylemenu.css">
+    <link rel="stylesheet" href="style/sassstylemenu.css">
     <title>Menu - À la française</title>
 </head>
 <body>
     <header>
         <nav>
-            <button>
-                <div>
-                    <a href="/index.html">
-                        <i class="fa-solid fa-arrow-left"></i>
-                    </a>
-                </div>
-            </button>
-            <img src="images/logo/ohmyfood.png" alt="Logo Ohmyfood">
+            <div class="headlogo">    
+                <p class="headlogo__text">
+                    ohmyfood
+                </p>
+            </div>
         </nav>
-        <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Restaurant 3">
+        <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Restaurant 3" class="header_img">
     </header>
-    <main>
-        <div>
-            <h1>
+    <main class="main">
+        <div class="main__name">
+            <h1 class="main__name__text">
                 À la française
             </h1>
-            <i class="fa-light fa-heart"></i>
+            <i class="fa-regular fa-heart main__name__icone"></i>
         </div>
-        <section>
-            <h2>
+        <section class="main__section">
+            <h2 class="main__section__title">
                 ENTRÉES
             </h2>
-            <div>
-                <h3>
+            <div class="main__section__card">
+                <h3 class="main__section__card__title">
                     Tartare de poulpe acidulé
                 </h3>
-                <div>
+                <div class="main__section__card__description">
                     <p>
                         Aux zestes d'orange
                     </p>
-                    <p>
+                    <p class="main__section__card__description__price">
                         25€
                     </p>
                 </div>
             </div>
-            <div>
-                <h3>
+            <div class="main__section__card">
+                <h3 class="main__section__card__title">
                     Velouté de légumes d'antan
                 </h3>
-                <div>
+                <div class="main__section__card__description">
                     <p>
                         Carotte, panais, topinambour
                     </p>
-                    <p>
+                    <p class="main__section__card__description__price">
                         35€
                     </p>
                 </div>
             </div>
-            <div>
-                <h3>
+            <div class="main__section__card">
+                <h3 class="main__section__card__title">
                     Soupe à l'oignon
                 </h3>
-                <div>
+                <div class="main__section__card__description">
                     <p>
                         Revisitée
                     </p>
-                    <p>
+                    <p class="main__section__card__description__price">
                         20€
                     </p>
                 </div>
             </div>
         </section>
-        <section>
-            <h2>
+        <section class="main__section">
+            <h2 class="main__section__title">
                 PLATS
             </h2>
-            <div>
-                <h3>
+            <div class="main__section__card">
+                <h3 class="main__section__card__title">
                     Coquilles Saint-Jacques
                 </h3>
-                <div>
+                <div class="main__section__card__description">
                     <p>
                         Accompagnées d'une purée de panais
                     </p>
-                    <p>
+                    <p class="main__section__card__description__price">
                         40€
                     </p>
                 </div>
             </div>
-            <div>
-                <h3>
+            <div class="main__section__card">
+                <h3 class="main__section__card__title">
                     Magret de canard
                 </h3>
-                <div>
+                <div class="main__section__card__description">
                     <p>
                         Et parmentier de pommes de terre
                     </p>
-                    <p>
+                    <p class="main__section__card__description__price">
                         35€
                     </p>
                 </div>
             </div>
-            <div>
-                <h3>
+            <div class="main__section__card">
+                <h3 class="main__section__card__title">
                     Pigeonneau d'Ille-et-Vilaine
                 </h3>
-                <div>
+                <div class="main__section__card__description">
                     <p>
                         Sur son lit de gnocchis aux légumes
                     </p>
-                    <p>
+                    <p class="main__section__card__description__price">
                         44€
                     </p>
                 </div>
             </div>
         </section>
-        <section>
-            <h2>
+        <section class="main__section">
+            <h2 class="main__section__title">
                 DESSERTS
             </h2>
-            <div>
-                <h3>
+            <div class="main__section__card">
+                <h3 class="main__section__card__title">
                     Pétales de violettes glacés
                 </h3>
-                <div>
+                <div class="main__section__card__description">
                     <p>
                         Et purée de noisettes
                     </p>
-                    <p>
+                    <p class="main__section__card__description__price">
                         18€
                     </p>
                 </div>
             </div>
-            <div>
-                <h3>
+            <div class="main__section__card">
+                <h3 class="main__section__card__title">
                     Fondant au chocolat
                 </h3>
-                <div>
+                <div class="main__section__card__description">
                     <p>
                         Revisité
                     </p>
-                    <p>
+                    <p class="main__section__card__description__price">
                         22€
                     </p>
                 </div>
             </div>
-            <div>
-                <h3>
+            <div class="main__section__card">
+                <h3 class="main__section__card__title">
                     Millefeuille croustillant
                 </h3>
-                <div>
+                <div class="main__section__card__description">
                     <p>
                         Myrtilles et pâte d'amande
                     </p>
-                    <p>
+                    <p class="main__section__card__description__price">
                         23€
                     </p>
                 </div>
             </div>
         </section>
-        <button>
-            Commander
-        </button>
+        <div class="main__container">
+            <button class="main__container__button">
+                Commander
+            </button>
+        </div>
     </main>
-    <footer>
-        <img src="images/logo/ohmyfood.png" alt="Logo Ohmyfood">
-        <ul>
-            <li>
-                <a href="#"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a>
+    <footer class="footer">
+        <p class="footer__logo">
+            ohmyfood
+        </p>
+        <ul class="footer__ul">
+            <li class="footer__ul__li">
+                <a href="#" class="footer__ul__li__link">
+                    <div class="footer__ul__li__link__icone footer__ul__li__link__icone--more">
+                        <i class="fa-solid fa-utensils"></i>
+                    </div>
+                    Proposer un restaurant
+                </a>
             </li>
-            <li>
-                <a href="#"><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</a>
+            <li class="footer__ul__li">
+                <a href="#" class="footer__ul__li__link">
+                    <div class="footer__ul__li__link__icone">
+                        <i class="fa-solid fa-handshake-angle"></i>
+                    </div>
+                    Devenir partenaire
+                </a>
             </li>
-            <li>
-                <a href="#">Mentions légales</a>
+            <li class="footer__ul__li">
+                <a href="#" class="footer__ul__li__link footer__ul__li__link--weight">Mentions légales</a>
             </li>
-            <li>
-                <a href="#">Contact</a>
+            <li class="footer__ul__li">
+                <a href="#" class="footer__ul__li__link footer__ul__li__link--weight">Contact</a>
             </li>
         </ul>
     </footer>
