--- a/menu4.html
+++ b/menu4.html
@@ -8,180 +8,191 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Shrikhand&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/style/sassstylemenu.css">
+    <link rel="stylesheet" href="style/sassstylemenu.css">
     <title>Menu - Le délice des sens</title>
 </head>
 <body>
     <header>
         <nav>
-            <button>
-                <div>
-                    <a href="/index.html">
-                        <i class="fa-solid fa-arrow-left"></i>
-                    </a>
-                </div>
-            </button>
-            <img src="images/logo/ohmyfood.png" alt="Logo Ohmyfood">
+            <div class="headlogo">    
+                <p class="headlogo__text">
+                    ohmyfood
+                </p>
+            </div>
         </nav>
-        <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Restaurant 4">
+        <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Restaurant 4" class="header_img">
     </header>
-    <main>
-        <div>
-            <h1>
+    <main class="main">
+        <div class="main__name">
+            <h1 class="main__name__text">
                 Le délice des sens
             </h1>
-            <i class="fa-light fa-heart"></i>
+            <i class="fa-regular fa-heart main__name__icone"></i>
         </div>
-        <section>
-            <h2>
+        <section class="main__section">
+            <h2 class="main__section__title">
                 ENTRÉES
             </h2>
-            <div>
-                <h3>
+            <div class="main__section__card">
+                <h3 class="main__section__card__title">
                     Tartare de thon
                 </h3>
-                <div>
+                <div class="main__section__card__description">
                     <p>
                         Assaisonné au yuzu
                     </p>
-                    <p>
+                    <p class="main__section__card__description__price">
                         25€
                     </p>
                 </div>
             </div>
-            <div>
-                <h3>
+            <div class="main__section__card">
+                <h3 class="main__section__card__title">
                     Bouchée de homard croustillant
                 </h3>
-                <div>
+                <div class="main__section__card__description">
                     <p>
                         Et sa farandole de petits légumes
                     </p>
-                    <p>
+                    <p class="main__section__card__description__price">
                         35€
                     </p>
                 </div>
             </div>
-            <div>
-                <h3>
+            <div class="main__section__card">
+                <h3 class="main__section__card__title">
                     Velouté de cèpes 
                 </h3>
-                <div>
+                <div class="main__section__card__description">
                     <p>
                         Aux truffes
                     </p>
-                    <p>
+                    <p class="main__section__card__description__price">
                         20€
                     </p>
                 </div>
             </div>
         </section>
-        <section>
-            <h2>
+        <section class="main__section">
+            <h2 class="main__section__title">
                 PLATS
             </h2>
-            <div>
-                <h3>
+            <div class="main__section__card">
+                <h3 class="main__section__card__title">
                     Poulet rôti aux herbes de Provence 
                 </h3>
-                <div>
+                <div class="main__section__card__description">
                     <p>
                         Et sa crème de truffe
                     </p>
-                    <p>
+                    <p class="main__section__card__description__price">
                         40€
                     </p>
                 </div>
             </div>
-            <div>
-                <h3>
+            <div class="main__section__card">
+                <h3 class="main__section__card__title">
                     Langouste rôtie 
                 </h3>
-                <div>
+                <div class="main__section__card__description">
                     <p>
                         Et ses légumes de saison
                     </p>
-                    <p>
+                    <p class="main__section__card__description__price">
                         35€
                     </p>
                 </div>
             </div>
-            <div>
-                <h3>
+            <div class="main__section__card">
+                <h3 class="main__section__card__title">
                     Côte de boeuf Angus 
                 </h3>
-                <div>
+                <div class="main__section__card__description">
                     <p>
                         Et sa purée de panais
                     </p>
-                    <p>
+                    <p class="main__section__card__description__price">
                         44€
                     </p>
                 </div>
             </div>
         </section>
-        <section>
-            <h2>
+        <section class="main__section">
+            <h2 class="main__section__title">
                 DESSERTS
             </h2>
-            <div>
-                <h3>
+            <div class="main__section__card">
+                <h3 class="main__section__card__title">
                     Farandole de desserts
                 </h3>
-                <div>
+                <div class="main__section__card__description">
                     <p>
                         Du chef
                     </p>
-                    <p>
+                    <p class="main__section__card__description__price">
                         18€
                     </p>
                 </div>
             </div>
-            <div>
-                <h3>
+            <div class="main__section__card">
+                <h3 class="main__section__card__title">
                     Crème brulée 
                 </h3>
-                <div>
+                <div class="main__section__card__description">
                     <p>
                         Revisitée
                     </p>
-                    <p>
+                    <p class="main__section__card__description__price">
                         22€
                     </p>
                 </div>
             </div>
-            <div>
-                <h3>
+            <div class="main__section__card">
+                <h3 class="main__section__card__title">
                     Tiramisu 
                 </h3>
-                <div>
+                <div class="main__section__card__description">
                     <p>
                         À la noisette
                     </p>
-                    <p>
+                    <p class="main__section__card__description__price">
                         23€
                     </p>
                 </div>
             </div>
         </section>
-        <button>
-            Commander
-        </button>
+        <div class="main__container">
+            <button class="main__container__button">
+                Commander
+            </button>
+        </div>
     </main>
-    <footer>
-        <img src="images/logo/ohmyfood.png" alt="Logo Ohmyfood">
-        <ul>
-            <li>
-                <a href="#"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a>
+    <footer class="footer">
+        <p class="footer__logo">
+            ohmyfood
+        </p>
+        <ul class="footer__ul">
+            <li class="footer__ul__li">
+                <a href="#" class="footer__ul__li__link">
+                    <div class="footer__ul__li__link__icone footer__ul__li__link__icone--more">
+                        <i class="fa-solid fa-utensils"></i>
+                    </div>
+                    Proposer un restaurant
+                </a>
             </li>
-            <li>
-                <a href="#"><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</a>
+            <li class="footer__ul__li">
+                <a href="#" class="footer__ul__li__link">
+                    <div class="footer__ul__li__link__icone">
+                        <i class="fa-solid fa-handshake-angle"></i>
+                    </div>
+                    Devenir partenaire
+                </a>
             </li>
-            <li>
-                <a href="#">Mentions légales</a>
+            <li class="footer__ul__li">
+                <a href="#" class="footer__ul__li__link footer__ul__li__link--weight">Mentions légales</a>
             </li>
-            <li>
-                <a href="#">Contact</a>
+            <li class="footer__ul__li">
+                <a href="#" class="footer__ul__li__link footer__ul__li__link--weight">Contact</a>
             </li>
         </ul>
     </footer>
