--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </h1>
         <section class="main__section">
             <article class="main__section__card">
-                <a href="menus/menu1.html">
+                <a href="menu1.html">
                     <div class="main__section__card__container">
                         <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Restaurant 1" class="main__section__card__container__img">
                     </div>
@@ -95,7 +95,7 @@
                 </a>
             </article>
             <article class="main__section__card">
-                <a href="menus/menu2.html">
+                <a href="menu2.html">
                     <div class="main__section__card__container">
                         <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Restaurant 2" class="main__section__card__container__img">
                     </div>
@@ -120,7 +120,7 @@
                 </a>
             </article>
             <article class="main__section__card">
-                <a href="menus/menu3.html">
+                <a href="menu3.html">
                     <div class="main__section__card__container">
                         <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Restaurant 3" class="main__section__card__container__img">
                     </div>
@@ -140,7 +140,7 @@
                 </a>
             </article>
             <article class="main__section__card">
-                <a href="menus/menu4.html">
+                <a href="menu4.html">
                     <div class="main__section__card__container">
                         <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Restaurant 4" class="main__section__card__container__img">
                     </div>
