--- a/menus/menu4.html
+++ b/menus/menu4.html
@@ -69,14 +69,14 @@
             </div>
             <div class="main__section__card">
                 <h3 class="main__section__card__title">
-                    Velouté de cèpes 
+                    Poulet rôti aux herbes de Provence
                 </h3>
                 <div class="main__section__card__description">
                     <p>
-                        Aux truffes
+                        Et sa crème de truffe
                     </p>
                     <p class="main__section__card__description__price">
-                        20€
+                        40€
                     </p>
                 </div>
             </div>
@@ -137,14 +137,14 @@
             </div>
             <div class="main__section__card">
                 <h3 class="main__section__card__title">
-                    Farandole de desserts
+                    Œuf au plat
                 </h3>
                 <div class="main__section__card__description">
                     <p>
-                        Du chef
+                        Assaisonné à la truffe sur lit de caviar
                     </p>
                     <p class="main__section__card__description__price">
-                        18€
+                        76€
                     </p>
                 </div>
             </div>
