Début des animations

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
                 <p class="navbar__city">Paris, Belleville</p>
             </div>
             <div class="description">
-                <h1 class="description__title">
+                <p class="description__title">
                     Réservez le menu qui vous convient
-                </h1>
+                </p>
                 <h2 class="description__discover">
                     Découvrez des restaurants d'exception, sélectionnés par nos soins
                 </h2>
@@ -68,7 +68,7 @@
         <h1 class="main__title" id="restaurants">
             Restaurants
         </h1>
-        <section class="main__section">
+        <div class="main__section">
             <article class="main__section__card">
                 <a href="menus/menu1.html">
                     <div class="main__section__card__container">
@@ -89,7 +89,6 @@
                                     Nouveau
                                 </p>
                             </div>
-                            <i class="fa-regular fa-heart main__section__card__description__bis__heart"></i>
                         </div>
                     </div>
                 </a>
@@ -114,7 +113,6 @@
                                     Nouveau
                                 </p>
                             </div>
-                            <i class="fa-regular fa-heart main__section__card__description__bis__heart"></i>
                         </div>
                     </div>
                 </a>
@@ -133,9 +131,6 @@
                                 Cité Rouge
                             </p>
                         </div>
-                        <div class="main__section__card__description__bis">
-                            <i class="fa-regular fa-heart main__section__card__description__bis__heart"></i>
-                        </div>
                     </div>
                 </a>
             </article>
@@ -153,13 +148,10 @@
                                 Folie-Méricourt
                             </p>
                         </div>
-                        <div class="main__section__card__description__bis">
-                            <i class="fa-regular fa-heart main__section__card__description__bis__heart"></i>
-                        </div>
                     </div>
                 </a>
             </article>
-        </section>
+        </div>
     </main>
     <footer class="footer">
         <p class="footer__logo">
@@ -186,7 +178,7 @@
                 <a href="#" class="footer__ul__li__link footer__ul__li__link--weight">Mentions légales</a>
             </li>
             <li class="footer__ul__li">
-                <a href="#" class="footer__ul__li__link footer__ul__li__link--weight">Contact</a>
+                <a href="mailto:email@example.com" class="footer__ul__li__link footer__ul__li__link--weight">Contact</a>
             </li>
         </ul>
     </footer>
