--- a/menus/menu4.html
+++ b/menus/menu4.html
@@ -14,15 +14,18 @@
 <body>
     <header>
         <nav class="nav">
-            <div class="nav__arrow">
-                <a href="../index.html">
-                    <i class="fa-solid fa-arrow-left"></i>
-                </a>
-            </div>
-            <div class="nav__headlogo">    
+            <div class="nav__headlogo"> 
+                <div class="nav__headlogo__arrow">
+                    <a href="../index.html">
+                        <i class="fa-solid fa-arrow-left"></i>
+                    </a>
+                </div>   
                 <p class="nav__headlogo__text">
                     ohmyfood
                 </p>
+                <div class="nav__headlogo__arrow--hidden">
+                    <i class="fa-solid fa-arrow-left"></i>
+                </div>  
             </div>
         </nav>
         <img src="../images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Restaurant 4" class="header_img">
@@ -32,7 +35,6 @@
             <h1 class="main__name__text">
                 Le délice des sens
             </h1>
-            <i class="fa-regular fa-heart main__name__icone"></i>
         </div>
         <section class="main__section">
             <h2 class="main__section__title">
