--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
     <title>Ohmyfood - Accueil</title>
 </head>
 <body>
+    <div class="loader-container">
+        <div class="dot d1"></div>
+        <div class="dot d2"></div>
+        <div class="dot d3"></div>
+    </div>
     <header>
         <div class="headlogo">    
             <p class="headlogo__text">
@@ -83,12 +88,12 @@
                                 Ménilmontant
                             </p>
                         </div>
-                        <div class="main__section__card__description__bis">
-                            <div class="main__section__card__description__bis__new">
-                                <p>
-                                    Nouveau
-                                </p>
-                            </div>
+                        <div class="main__section__card__description__container">
+                            <i class="fa-regular fa-heart main__section__card__description__container__heart--bis"></i>
+                            <i class="fa-solid fa-heart main__section__card__description__container__heart-solid--bis"></i>
+                            <p class="main__section__card__description__container__new">
+                                Nouveau
+                            </p>
                         </div>
                     </div>
                 </a>
@@ -107,12 +112,12 @@
                                 Charonne
                             </p>
                         </div>
-                        <div class="main__section__card__description__bis">
-                            <div class="main__section__card__description__bis__new">
-                                <p>
-                                    Nouveau
-                                </p>
-                            </div>
+                        <div class="main__section__card__description__container">
+                            <i class="fa-regular fa-heart main__section__card__description__container__heart--bis"></i>
+                            <i class="fa-solid fa-heart main__section__card__description__container__heart-solid--bis"></i>
+                            <p class="main__section__card__description__container__new">
+                                Nouveau
+                            </p>
                         </div>
                     </div>
                 </a>
@@ -131,6 +136,10 @@
                                 Cité Rouge
                             </p>
                         </div>
+                        <div class="main__section__card__description__container">
+                            <i class="fa-regular fa-heart main__section__card__description__container__heart"></i>
+                            <i class="fa-solid fa-heart main__section__card__description__container__heart-solid"></i>
+                        </div>
                     </div>
                 </a>
             </article>
@@ -147,6 +156,10 @@
                             <p class="main__section__card__description__place">
                                 Folie-Méricourt
                             </p>
+                        </div>
+                        <div class="main__section__card__description__container">
+                            <i class="fa-regular fa-heart main__section__card__description__container__heart"></i>
+                            <i class="fa-solid fa-heart main__section__card__description__container__heart-solid"></i>
                         </div>
                     </div>
                 </a>
