Ajout renvoi vers adresse mail

--- a/menus/menu2.html
+++ b/menus/menu2.html
@@ -275,7 +275,7 @@
                 <a href="#" class="footer__ul__li__link footer__ul__li__link--weight">Mentions légales</a>
             </li>
             <li class="footer__ul__li">
-                <a href="#" class="footer__ul__li__link footer__ul__li__link--weight">Contact</a>
+                <a href="mailto:ohmyfood@gmail.com" class="footer__ul__li__link footer__ul__li__link--weight">Contact</a>
             </li>
         </ul>
     </footer>
