--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                 <a href="#" class="footer__ul__li__link footer__ul__li__link--weight">Mentions légales</a>
             </li>
             <li class="footer__ul__li">
-                <a href="mailto:email@example.com" class="footer__ul__li__link footer__ul__li__link--weight">Contact</a>
+                <a href="mailto:ohmyfood@gmail.com" class="footer__ul__li__link footer__ul__li__link--weight">Contact</a>
             </li>
         </ul>
     </footer>
