Ajouts de commentaires et suppression d'une keyframe non utilisée

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Ohmyfood - Accueil</title>
 </head>
 <body>
-    <div class="loader-container">
+    <div class="loader-container">  <!-- Code correspondant au loader -->
         <div class="dot d1"></div>
         <div class="dot d2"></div>
         <div class="dot d3"></div>
