--- a/menus/menu1.html
+++ b/menus/menu1.html
@@ -61,7 +61,7 @@
                         25€
                     </p>
                 </div>
-                <div class="main__section__card__check">
+                <div class="main__section__card__check">    <!-- Div vide permettant de faire l'animation du sélecteur de plat -->
                     <i class="fa-sharp fa-solid fa-circle-check main__section__card__check__icon"></i>
                 </div>
             </div>
